--- a/configuration_template.cfg
+++ b/configuration_template.cfg
@@ -3,6 +3,11 @@ MODES = /path/to/shapes/file
 DIMENSION = number of databases
 STRUCT_HISTORY = [/path/to/structural/history1, /path/to/structural/history2, ...]
 AERO_HISTORY = [/path/to/aero/history1, /path/to/aero/history2, ...]
-IMPOSED_MOTION = YES or NO
-INPUTS = /path/to/input/file (only used if IMPOSED_MOTION=YES)
 OUTPUTS = /path/to/output/file
+IMPOSED_MOTION = YES or NO
+% Options only used if IMPOSED_MOTION=YES
+INPUTS = /path/to/input/file
+% Options only used if IMPOSED_MOTION=NO
+TIME_ITER = number of time iterations
+MODAL_DAMP = modal damping intended as critical damping (not in percentage)
+PUNCH_FILE = punch file for the structural model
