So many bugs...

--- a/configuration_template.cfg
+++ b/configuration_template.cfg
@@ -1,8 +1,8 @@
 NORMALS = path/to/normals/file
 MODES = /path/to/shapes/file
 DIMENSION = number of databases
-STRUCT_HISTORY = [/path/to/structural/history1, /path/to/structural/history2, ...]
-AERO_HISTORY = [/path/to/aero/history1, /path/to/aero/history2, ...]
+STRUCT_HISTORY = ["/path/to/structural/history1", "/path/to/structural/history2", ...]
+AERO_HISTORY = ["/path/to/aero/history1", "/path/to/aero/history2", ...]
 OUTPUTS = /path/to/output/file
 IMPOSED_MOTION = YES or NO
 % Options only used if IMPOSED_MOTION=YES
