--- a/configuration_template.cfg
+++ b/configuration_template.cfg
@@ -4,6 +4,9 @@ DIMENSION = number of databases
 STRUCT_HISTORY = ["/path/to/structural/history1", "/path/to/structural/history2", ...]
 AERO_HISTORY = ["/path/to/aero/history1", "/path/to/aero/history2", ...]
 OUTPUTS = /path/to/output/file
+% If thresholding is int, this is the number of modes to be retained, if it is OPTIMAL, we use Donoho,
+% if it is INTERACTIVE we will be requested to select it
+THRESHOLDING = 10
 IMPOSED_MOTION = YES or NO
 % Options only used if IMPOSED_MOTION=YES
 INPUTS = /path/to/input/file
