--- a/configuration_template.cfg
+++ b/configuration_template.cfg
@@ -5,8 +5,13 @@ STRUCT_HISTORY = ["/path/to/structural/history1", "/path/to/structural/history2"
 AERO_HISTORY = ["/path/to/aero/history1", "/path/to/aero/history2", ...]
 OUTPUTS = /path/to/output/file
 % If thresholding is int, this is the number of modes to be retained, if it is OPTIMAL, we use Donoho,
-% if it is INTERACTIVE we will be requested to select it
+% if it is INTERACTIVE we will be requested to select it.
 THRESHOLDING = 10
+% If stabilisation is BRUNTON, we use Brunton stabilisation scheme, if it is FLIP, we force
+% the unstable eigenvalues to have a module less than one, if it is a float, we specify how
+% smaller than one they should be (i.e., if we say STABILISATION = 0.1, then the eigenvalues
+% with a module bigger than one will then have a module of 0.9)
+STABILISATION = FLIP
 IMPOSED_MOTION = YES or NO
 % Options only used if IMPOSED_MOTION=YES
 INPUTS = /path/to/input/file
