Driver in imposed motion case done!

--- a/Tutorials/data/configTutorial4.cfg
+++ b/Tutorials/data/configTutorial4.cfg
@@ -4,7 +4,8 @@ DIMENSION = 1
 STRUCT_HISTORY = ["data/blendedStep/StructHistoryModal.dat"]
 AERO_HISTORY = ["data/blendedStep/surface_flow.csv"]
 OUTPUTS = data/outputsTutorial3.dat
-THRESHOLDING = 0
+THRESHOLDING = 25
 STABILISATION = BRUNTON
 IMPOSED_MOTION = YES
-INPUTS = data/inputsTutorial3.dat
+INPUTS = data/inputsTutorial4.dat
+OUTPUTS = data/outputsTutorial4.dat
