--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .idea
 *.csv
 *.dat
+!Tutorials/data/inputsTutorial4.dat
+!Tutorials/data/liftRefTutorial4.csv
+!Tutorials/data/outputsTutorial4.dat
