--- a/configuration_template.cfg
+++ b/configuration_template.cfg
@@ -13,9 +13,9 @@ THRESHOLDING = 10
 % with a module bigger than one will then have a module of 0.9)
 STABILISATION = FLIP
 IMPOSED_MOTION = YES or NO
-% Options only used if IMPOSED_MOTION=YES
+%%%%%%%%%%%%%% Options only used if IMPOSED_MOTION=YES
 INPUTS = /path/to/input/file
-% Options only used if IMPOSED_MOTION=NO
+%%%%%%%%%%%%%% Options only used if IMPOSED_MOTION=NO
 TIME_ITER = number of time iterations
 MODAL_DAMP = modal damping intended as critical damping (not in percentage)
 PUNCH_FILE = punch file for the structural model
