--- a/Tutorials/data/configTutorial5.cfg
+++ b/Tutorials/data/configTutorial5.cfg
@@ -5,6 +5,8 @@ STRUCT_HISTORY = ["data/blendedStep/StructHistoryModal.dat"]
 AERO_HISTORY = ["data/blendedStep/surface_flow.csv"]
 THRESHOLDING = 25
 STABILISATION = BRUNTON
-IMPOSED_MOTION = YES
-INPUTS = data/inputsTutorial4.dat
-OUTPUTS = data/outputsTutorial4.dat
+IMPOSED_MOTION = NO
+OUTPUTS = data/outputsTutorial5.dat
+TIME_ITER = 3760
+MODAL_DAMP = -0.001
+PUNCH_FILE = data/modal.pch
