--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.pyc
 *.csv
 *.dat
+*testingRoutines*
+*.pkl
 !Tutorials/data/inputsTutorial4.dat
 !Tutorials/data/liftRefTutorial4.csv
 !Tutorials/data/outputsTutorial4.dat
