support different scales

--- a/configuration_template.cfg
+++ b/configuration_template.cfg
@@ -1,6 +1,7 @@
 NORMALS = path/to/normals/file
 MODES = /path/to/shapes/file
 STRUCT_HISTORY = ["/path/to/structural/history1", "/path/to/structural/history2", ...]
+MODE_SCALE = [0.9, 0.8, 1.3]
 AERO_HISTORY = ["/path/to/aero/history1", "/path/to/aero/history2", ...]
 OUTPUTS = /path/to/output/file
 % If thresholding is int, this is the number of modes to be retained, if it is OPTIMAL, we use Donoho,
