--- a/Tutorials/data/configTutorial4.cfg
+++ b/Tutorials/data/configTutorial4.cfg
@@ -1,7 +1,7 @@
 NORMALS = data/Modes/Normals.csv
 MODES = data/Modes/Mode.csv
-STRUCT_HISTORY = ["data/blendedStep/StructHistoryModal.dat"]
-AERO_HISTORY = ["data/blendedStep/surface_flow.csv"]
+STRUCT_HISTORY = "data/blendedStep/StructHistoryModal.dat"
+AERO_HISTORY = "data/blendedStep/surface_flow.csv"
 THRESHOLDING = 30
 STABILISATION = BRUNTON
 IMPOSED_MOTION = YES
